k8s/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
  labels:
    name: todo-app
    app: todo-list-nodejs
